# user_pets

./: .env  .gitignore  Dockerfile  Dockerfile.nginx  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
nginx/: default.conf
pets/: admin.py  models.py  routers.py  serializers.py  services.py  urls.py  views.py
users/: admin.py  forms.py  managers.py  models.py  serializers.py  services.py  views.py
